fix spilling mistakes #2

--- a/assets/css/custom-new-style.css
+++ b/assets/css/custom-new-style.css
@@ -256,12 +256,13 @@ html[dir="rtl"] .growth__box .content p {
   padding-left: 10px;
   cursor: pointer;
   margin-bottom: 7px !important;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .radio label {
   padding-left: unset;
   padding-right: 10px;
+  margin-top: -5px;
 }
 
 .radio label:before {
